PR/40144: Christoph Badura: quiting from vi recovery mode leaves tty settings garbled. When vi creates a new EXF structure it did not set all the fd related fields to -1, so if the fd field was never initialized, it was 0 because of the calloc() call, so closing the file, ended up closing 0, so the terminal fd was closed and that prevented the ioctl to restore the term settings from succeeding.